# CHIP8-Emulator

./: CMakeLists.txt  README.md  a.out  chip8  cpu.cpp  cpu.h  errors.txt  hex.txt  main.c  main.cpp  makefile
src/: cpu.cpp  cpu.h  main.cpp
